First commit (SQLite based)

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,7 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:16.0.2'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.3'
+    implementation 'org.xerial:sqlite-jdbc:3.31.1'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
