--- a/build.gradle
+++ b/build.gradle
@@ -19,29 +19,17 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.3'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
-}
-
-jar {
-    manifest {
-        attributes "Main-Class": "org.xorko.todolist.Launcher"
-    }
-
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-task fatJar(type: Jar) {
-    manifest {
-        attributes "Main-Class": "org.xorko.todolist.Launcher"
-        attributes "Class-Path": configurations.compile.collect { it.getName() }.join(' ')
-    }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
+    testImplementation 'org.assertj:assertj-core:3.18.0'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
 }
 
 javafx {
     version = '14'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+test {
+    useJUnitPlatform()
 }
